# shellpainter

./: LICENSE  README.adoc  layout_box.ppm
app/cal/: cal.c
app/color-info/: color-info.c
app/echo/: echo.c
app/keyboard/: keyboard.c
app/msg-log/: msg-log.c
app/scroll/: scroll.c
app/textinput/: textinput.c
inc/: termbox.h
inc/cmdscreen/: CSComboBox.h  CSLabel.h  CSMouseMsg.h  CSResizeMsg.h  CSTextArea.h  apidecl.h  border.h  cmdscreen.h  colors.h  csAlignment.h  csApp.h  csBox.h  csHeap.h  csKeyMsg.h  csLayout.h  csLimit.h  csMsg.h  csMsgQueue.h  csPadding.h  csPoint.h  csRect.h  csScreen.h  csSize.h  csStyle.h  csTextInput.h  csWidget.h  cs_Axis.h  rect.h  term.h
inc/cmdscreen/layout/: align.h  alignx.h  aligny.h  exp.h  fill.h  fixed.h  flex.h  line.h  none.h  pad.h
inc/uiinabox/: align.h  alignx.h  aligny.h  apidecl.h  cover.h  csBox.h  exp.h  fill.h  fixed.h  global.h  line.h  none.h  pad.h  scroll.h  sized.h  uiAlignment.h  uiBox.h  uiLimit.h  uiPadding.h  uiPoint.h  uiRect.h  uiSize.h  uiViewport.h  ui_Axis.h  uiinabox.h
inc/uiinabox/box/: align.h  alignx.h  aligny.h  box.h  exp.h  fill.h  fixed.h  line.h  none.h  pad.h
mk/cmake/: CMakeLists.txt  Custom.cmake  FileLists.cmake
src/cmdscreen/: CSComboBox.c  CSKeyMsg.c  CSLabel.c  CSMouseMsg.c  CSResizeMsg.c  CSTextArea.c  CSTextInput.c  border.c  colors.c  csAlignment.c  csApp.c  csBox.c  csLayout.c  csLimit.c  csMsg.c  csMsgQueue.c  csPadding.c  csPoint.c  csRect.c  csScreen.c  csSize.c  csStyle.c  rect.c  term.c
src/cmdscreen/_/: CS_MainScreen.c  CS_MainScreen.h  csMemArea.c  csMemArea.h  termbox.c
src/cmdscreen/layout/: align.c  alignx.c  aligny.c  exp.c  fill.c  fixed.c  flex.c  line.c  none.c  pad.c
src/uiinabox/: align.c  alignx.c  aligny.c  cover.c  exp.c  fill.c  fixed.c  global.c  line.c  none.c  pad.c  scroll.c  sized.c  uiAlignment.c  uiBox.c  uiLimit.c  uiPadding.c  uiPoint.c  uiRect.c  uiSize.c  uiViewport.c
src/uiinabox/_/: util.h
src/uiinabox/box/: align.c  alignx.c  aligny.c  exp.c  fill.c  fixed.c  line.c  none.c  pad.c
test/cmdscreen/CSTextInput/: update_text_input.c
test/cmdscreen/csLayout/: distinct_styles.h  layout_box.c  layout_col.c  (+2 more)
(+36 files in other folders)
